--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Poker</title>
+        <title>L5R r&k</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="./css/pure-min.css"/>
@@ -11,16 +11,23 @@
         <link rel="icon" href="app.png">
     </head>
     <body>
-        <div class="content">
-            <spa id="mainapp"></spa>
+        <div class="pure-g">
+            <div class="pure-u-sm-1-6 pure-u-md-1-4 pure-u-lg-1-3 pure-u-xl-3-8"></div>
+            <div class="pure-u-1 pure-u-sm-2-3 pure-u-md-1-2 pure-u-lg-1-3 pure-u-xl-1-4">
+                <spa></spa>
+            </div>
         </div>
         <footer>L5R</footer>
         <script src="./js/riot+compiler.min.js"></script>
+        <script src="./js/howler.core.min.js"></script>
         <script src="./js/Roll.js"></script>
         <script src="./tag/spa.tag" type="riot/tag"></script>
         <script>
             var model = new Roll
             riot.route.start(true)
+            var rollSound = new Howl({
+                src: ['./asset/roll.webm', './asset/roll.ogg']
+            });
             riot.mount('*')
         </script>
     </body>
